# neko

./: annotated.html  annotated_dup.js  classes.html  configure.ac  dir_000005_000014.html  dir_000006_000014.html  dir_000007_000014.html  dir_000008_000014.html  dir_000009_000014.html  dir_000010_000014.html  dir_000019_000014.html  dir_000020_000014.html  dir_000022_000014.html  dir_000023_000014.html  dir_000024_000014.html  dir_000025_000014.html  dir_000027_000014.html  dir_000028_000014.html  dir_000030_000014.html  dir_000031_000014.html  dir_000032_000014.html  dir_000033_000014.html  dir_000037_000014.html  dir_000038_000014.html  dir_000040_000014.html  dir_000041_000014.html  dir_000042_000014.html  dir_000043_000014.html  dir_000045_000014.html  dir_000046_000014.html  dir_000048_000014.html  dir_000049_000014.html  dir_000050_000014.html  dir_000051_000014.html  dir_000055_000014.html  dir_000056_000014.html  dir_000057_000014.html  dir_000058_000014.html  dir_000059_000014.html  dir_000060_000014.html  (+439 more)
.github/workflows/: develop.yml
contrib/: Makefile.am
contrib/nekorepl/: Makefile.am  neko_repl.f90
d0/d02/: cuda_2dong__outflow__kernel_8h.html  cuda_2dong__outflow__kernel_8h_source.html
d0/d05/: opencl_2check_8h.html  opencl_2check_8h_source.html
d0/d06/: dirichlet_8c.html  dirichlet_8c_abe67393ea835d5633a112b6e4712f795_icgraph.map  dirichlet_8c_abe67393ea835d5633a112b6e4712f795_icgraph.md5  dirichlet_8c_ada40c8ffc06cf712209cdd5ae1308c00_icgraph.map  dirichlet_8c_ada40c8ffc06cf712209cdd5ae1308c00_icgraph.md5  dirichlet_8c_source.html
d0/d09/: mean__field_8f90.html  mean__field_8f90.js  mean__field_8f90_source.html
d0/d0b/: interfaceprecon_1_1pc__update.html
d0/d0d/: namespacedevice__dirichlet.html  namespacedevice__dirichlet_a5a8cc3c888367dba518b2b3724b14df5_cgraph.map  namespacedevice__dirichlet_a5a8cc3c888367dba518b2b3724b14df5_cgraph.md5  namespacedevice__dirichlet_a5a8cc3c888367dba518b2b3724b14df5_icgraph.map  namespacedevice__dirichlet_a5a8cc3c888367dba518b2b3724b14df5_icgraph.md5  namespacedevice__dirichlet_ac26ada336d6ba5a9f6eca48c4312f1e2_cgraph.map  namespacedevice__dirichlet_ac26ada336d6ba5a9f6eca48c4312f1e2_cgraph.md5  namespacedevice__dirichlet_ac26ada336d6ba5a9f6eca48c4312f1e2_icgraph.map  namespacedevice__dirichlet_ac26ada336d6ba5a9f6eca48c4312f1e2_icgraph.md5
d0/d10/: structstructs_1_1struct__curve__t.html
d0/d22/: structpnpn__res__device_1_1pnpn__vel__res__device__t.html
d0/d25/: namespacegs__mpi.html  namespacegs__mpi.js
d0/d28/: device__mathops_8F90.html  device__mathops_8F90.js  device__mathops_8F90_source.html  structpnpn__res__sx_1_1pnpn__vel__res__sx__t.html
d0/d29/: namespacedevice__wall.html  namespacedevice__wall_a17a43dab80ef02a0ab802f06d82212f2_cgraph.map  namespacedevice__wall_a17a43dab80ef02a0ab802f06d82212f2_cgraph.md5  namespacedevice__wall_a17a43dab80ef02a0ab802f06d82212f2_icgraph.map  namespacedevice__wall_a17a43dab80ef02a0ab802f06d82212f2_icgraph.md5  namespacedevice__wall_a1d133e64ee725b812e334fe9c50f1e89_cgraph.map  namespacedevice__wall_a1d133e64ee725b812e334fe9c50f1e89_cgraph.md5  namespacedevice__wall_a1d133e64ee725b812e334fe9c50f1e89_icgraph.map  namespacedevice__wall_a1d133e64ee725b812e334fe9c50f1e89_icgraph.md5
d0/d2e/: structhtable_1_1htable__t.html  structhtable_1_1htable__t.js
d0/d30/: interfacedevice_1_1device__associated.html  structparameters_1_1param__t.html  structparameters_1_1param__t.js
d0/d35/: namespaceax__helm.html  namespaceax__helm.js  (+2 more)
d0/d37/: flow__profile_8f90.html  (+1 more)
m4/: ax_kahip.m4  ax_nvshmem.m4
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_14.js  classes_15.js  classes_16.js  classes_17.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  (+122 more)
src/: .depends  Makefile.am  fluid_method.f90  fluid_plan1.f90  ksp_pipecg.f90  mesh.f90  mpi_types.f90  neko.f90  parameters.f90  pc_hsmg.f90
src/caf/: mat.f90  spmv.f90  vec.f90
src/comm/: kahip.F90
src/common/: utils.f90
src/fluid/: fluid_scheme.f90
src/math/: array_math.f90  math.f90
src/mesh/: aabb_tree.f90  intersection_detector.f90
src/source_terms/: idw_source_term.f90  source_term_fctry.f90
(+3809 files in other folders)
